chore!: migrate to version 2.x